tests/sksl/errors/Ossfuzz32851.glsl
### Compilation failed:

error: 1: division by zero
error: 1: expected 'int', but found 'int2'
2 errors
